fix: correção no style da home, ajuste de contraste no título

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -12,7 +12,7 @@
 </div>
 <!--Home-->
 <div class="home">
-    <h1 class="ui header">IQAr - Índice de Qualidade do Ar</h1>
+    <h1 id="title">IQAr - Índice de Qualidade do Ar</h1>
         <p>Descubra se a qualidade do ar da sua região está adequada.</p>
 <!--Dropdown-->
     <div class="ui search selection dropdown" id="estadoDropdown">
